# wruntime

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md  bacon.toml  docker-compose.yml  engine.toml  proxy.toml
dev/: setup-vm.sh  validate-all.sh
dev/garage/: garage.toml
dev/postgres-init/: 01-databases.sh
docs/: architecture.md  configuration.md  demo.md  deployment.md  grpc-api.md  host-bindings.md  schemas.md  sdk.md  testing.md
docs/agents/: README.md  api_reference.md  codegen.md  constraints.md  decision_matrix.md  examples.md  module_template.md
docs/plans/: add_schedules.md  (+16 more)
ecommerce-example/: engine-client.toml  engine-inventory-1.toml  engine-inventory-2.toml  run.sh
ecommerce-example/client/: Cargo.toml  build.rs
ecommerce-example/client/src/: bindings.rs  lib.rs
ecommerce-example/client/wit/: world.wit
ecommerce-example/inventory/: Cargo.toml
ecommerce-example/inventory/src/: bindings.rs  lib.rs
ecommerce-example/inventory/wit/: world.wit
examples/: helpers.sh  parallel_invoke.sh
examples/codegen/agent/: Cargo.toml  build.rs
examples/codegen/agent/migrations/: V1__create_tables.sql
examples/codegen/agent/src/: lib.rs
examples/codegen/agent/wit/: world.wit
examples/codegen/collector/: Cargo.toml  build.rs
examples/codegen/collector/src/: lib.rs
examples/codegen/collector/wit/: world.wit
examples/codegen/coordinator/: Cargo.toml  build.rs
examples/codegen/coordinator/migrations/: V1__create_tables.sql
examples/codegen/coordinator/src/: lib.rs
examples/codegen/coordinator/wit/: world.wit
examples/codegen/worker/: Cargo.toml  build.rs
examples/codegen/worker/src/: lib.rs
examples/codegen/worker/wit/: world.wit
examples/ecommerce/client/: Cargo.toml  build.rs
examples/ecommerce/client/src/: bindings.rs  lib.rs
examples/ecommerce/client/wit/: world.wit
examples/ecommerce/inventory/: Cargo.toml  build.rs
examples/ecommerce/inventory/migrations/: V1__create_tables.sql
examples/ecommerce/inventory/src/: bindings.rs  lib.rs
examples/ecommerce/inventory/wit/: world.wit
node-a/: engine-2.toml
plans/: db_transactions.md  generated_multiple_modules.md  generated_plan.md  heartbeats_to_postgres.md  http2_migration.md  llm_host_interface.md  multi_manager.md  multiple_modules.md  node_deploy.md  per_module_database_isolation.md  plan.md  proxy_circuit_breaker.md  proxy_mtls.md  wasm_database_host_interface.md  wasm_guest_test_harness.md  wasm_tracing_interface.md  worker_mode.md
proto/: wruntime.proto
wit/: blobstore.wit  db.wit  llm.wit  tracing.wit
wr-build/: Cargo.toml
wr-cli/: Cargo.toml
wr-cli/src/: client.rs  display.rs  main.rs
wr-cli/src/cmd/: build_helpers.rs  bundle.rs  cert.rs  config.rs  db.rs  deploy_config.rs  dev.rs  engines.rs  helpers.rs  invoke.rs  logs.rs  managers.rs  metrics.rs  mod.rs  node.rs  schedules.rs  secrets.rs  service_gen.rs  services.rs
wr-common/: Cargo.toml  build.rs
wr-common/src/: config.rs  discovery.rs  http_headers.rs  http_pool.rs  identity.rs  lib.rs  lifecycle.rs  naming.rs  node.rs  pool.rs  signal.rs  telemetry.rs  tls.rs
wr-engine/: Cargo.toml
wr-engine/src/: blobstore.rs  config.rs  db.rs  engine.rs  lib.rs  llm.rs  main.rs  migration.rs  pool.rs  registry.rs  runtime.rs  server.rs  state.rs  tracing.rs  worker.rs
wr-engine/src/db/: bindings.rs  connection.rs  cursor.rs  host.rs  mod.rs  params.rs  rows.rs  tests.rs  transaction.rs
wr-manager/: Cargo.toml
wr-manager/migrations/: V10__routing_rule_proxy_address.sql  V11__drop_routing_rule_proxy_address.sql  V12__routing_rule_peer_address_not_empty.sql  V13__schedule_positive_counts.sql  V1__initial.sql  V2__secrets.sql  V3__managers.sql  V4__engine_heartbeats.sql  V5__schedules.sql  V6__peer_address.sql  V7__system_schema.sql  V8__module_heartbeats.sql  V9__schedule_leases.sql
wr-manager/src/: cluster.rs  config.rs  crypto.rs  db.rs  lib.rs  main.rs  migrate.rs  pool.rs  scheduler.rs  service.rs  state.rs
wr-proxy/: Cargo.toml
wr-proxy/src/: circuit_breaker.rs  config.rs  indexed_routing.rs  lib.rs  main.rs  metrics.rs  node_service.rs  routing.rs  schema.rs
wr-proxy/src/layers/: egress.rs  forward.rs  ingress.rs  metrics.rs  mod.rs  routing.rs  schema.rs  tracing.rs
wr-sdk/: Cargo.toml
wr-sdk/src/: blobstore.rs  db.rs  http.rs  io.rs  jobs.rs  lib.rs  llm.rs  log.rs  prelude.rs  tracing.rs
wr-sdk/wit/: world.wit
wr-tests/: Cargo.toml  build.rs
wr-tests/guests/: build.toml
wr-tests/guests/blobstore-guest/: Cargo.toml  build.rs
wr-tests/guests/blobstore-guest/src/: lib.rs
wr-tests/guests/blobstore-guest/wit/: world.wit
wr-tests/guests/db-guest/: Cargo.toml  build.rs
wr-tests/guests/db-guest/src/: lib.rs
wr-tests/guests/db-guest/wit/: world.wit
wr-tests/guests/http-guest/: Cargo.toml  build.rs
wr-tests/guests/http-guest/src/: lib.rs
wr-tests/guests/http-guest/wit/: deps  world.wit
wr-tests/guests/llm-guest/: Cargo.toml  build.rs
wr-tests/guests/llm-guest/src/: lib.rs
wr-tests/guests/llm-guest/wit/: world.wit
wr-tests/guests/schemas/: blobstore_test.binpb  blobstore_test.proto  db_test.binpb  db_test.proto  http_test.binpb  http_test.proto  llm_test.binpb  llm_test.proto  tracing_test.binpb  tracing_test.proto
wr-tests/guests/tracing-guest/: Cargo.toml  build.rs
wr-tests/guests/tracing-guest/src/: lib.rs
wr-tests/guests/tracing-guest/wit/: world.wit
wr-tests/tests/: bench_test.rs  circuit_breaker_test.rs  concurrent_routing_test.rs  config_test.rs  cross_node_test.rs  db_test.rs  egress_test.rs  health_test.rs  helpers.rs  ingress_test.rs  integration_test.rs  manager_test.rs  migration_test.rs  multi_manager_test.rs  namespace_test.rs  proxy_test.rs  scheduler_test.rs  schedules_test.rs  secrets_test.rs  tracing_test.rs  version_test.rs  wasm_blobstore_host_test.rs  wasm_db_host_test.rs  wasm_host_test.rs  wasm_http_host_test.rs  wasm_llm_host_test.rs  wasm_tracing_host_test.rs  worker_test.rs
wr-tests/tests/helpers/: blobstore.rs  db.rs  llm.rs  manager.rs  mod.rs  pki.rs  proto.rs  proxy.rs  stubs.rs  wait.rs  wasm.rs  worker.rs
(+80 files in other folders)
