[package]
name    = "wr-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wr-cli"
path = "src/main.rs"

[dependencies]
clap      = { version = "4", features = ["derive", "env"] }
tonic     = { version = "0.14", features = ["transport"] }
tokio     = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow    = "1"
tabled    = "0.16"
reqwest       = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "json"] }
prost         = "0.14"
prost-reflect = { version = "0.16", features = ["serde"] }
serde_json    = "1"
wr-common     = { path = "../wr-common", features = ["discovery"] }
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
wr-engine     = { path = "../wr-engine" }
tokio-postgres = "0.7"
libc          = "0.2"
toml          = "0.8"
serde         = { version = "1", features = ["derive"] }
