[package]
name    = "wr-common"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.14"
prost-types = "0.14"
tonic = { version = "0.14", features = ["transport", "tls-ring"] }
tonic-prost = "0.14"
serde = { version = "1", features = ["derive"] }
http = "1"
semver = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "registry",
] }
tracing-opentelemetry = "0.33"
opentelemetry = { version = "0.32", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.32", features = [
  "rt-tokio",
  "trace",
  "metrics",
  "logs",
] }
opentelemetry-otlp = { version = "0.32", features = [
  "grpc-tonic",
  "trace",
  "metrics",
  "logs",
] }
opentelemetry-appender-tracing = "0.32"
opentelemetry-http = "0.32"

# Optional: manager discovery via Postgres
deadpool-postgres = { version = "0.14", features = [
  "rt_tokio_1",
], optional = true }
tokio-postgres = { version = "0.7", optional = true }
tokio = { version = "1", features = [
  "sync",
  "time",
  "rt",
  "signal",
], optional = true }
rand = { version = "0.10", optional = true }
toml = { version = "1", optional = true }

# Optional: HTTP/2 client pool
hyper-util = { version = "0.1", features = [
  "client-legacy",
  "http2",
  "tokio",
], optional = true }
http-body = { version = "1", optional = true }

# Optional: TLS (mTLS for inter-service communication)
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "std",
  "tls12",
  "logging",
], optional = true }
rustls-pemfile = { version = "2", optional = true }
tokio-rustls = { version = "0.26", default-features = false, features = [
  "ring",
  "logging",
  "tls12",
], optional = true }
hyper-rustls = { version = "0.27", default-features = false, features = [
  "native-tokio",
  "http1",
  "http2",
  "tls12",
  "logging",
  "ring",
], optional = true }

[features]
default = []
discovery = [
  "dep:deadpool-postgres",
  "dep:tokio-postgres",
  "dep:tokio",
  "dep:rand",
]
pool = ["dep:deadpool-postgres", "dep:tokio-postgres", "dep:tokio"]
config = ["dep:toml"]
signal = ["dep:tokio"]
http-pool = ["dep:hyper-util", "dep:http-body"]
tls = [
  "dep:rustls",
  "dep:rustls-pemfile",
  "dep:tokio-rustls",
  "dep:hyper-rustls",
  "dep:hyper-util",
  "dep:http-body",
  "dep:tokio",
]

[dev-dependencies]
tempfile       = "3"
http-body-util = "0.1"
bytes          = "1"
toml           = "1"

[build-dependencies]
tonic-prost-build = "0.14"
