[package]
name = "wr-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic    = { version = "0.14", features = ["transport"] }
prost    = "0.14"
tokio    = { version = "1", features = ["full"] }
anyhow   = "1"
toml     = "0.8"
serde    = { version = "1", features = ["derive"] }
wr-common          = { path = "../wr-common" }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
