[package]
name = "wr-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tower          = { version = "0.5", features = ["full"] }
http           = "1"
hyper          = { version = "1", features = ["http2", "server"] }
hyper-util     = { version = "0.1", features = ["client-legacy", "http2", "tokio"] }
hyper-rustls   = { version = "0.27", features = ["native-tokio", "http1", "http2"] }
rustls         = { version = "0.23", features = ["ring"] }
http-body      = "1"
http-body-util = "0.1"
tokio          = { version = "1", features = ["full"] }
tonic          = { version = "0.14", features = ["transport"] }
bytes          = "1"
anyhow         = "1"
semver         = "1"
toml           = "0.8"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
failsafe           = "1"
wr-common          = { path = "../wr-common" }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
