[package]
name    = "wr-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tower = { version = "0.5", features = ["full"] }
http = "1"
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = [
  "client-legacy",
  "http1",
  "http2",
  "server-auto",
  "tokio",
] }
hyper-rustls = { version = "0.27", default-features = false, features = [
  "native-tokio",
  "http1",
  "http2",
  "tls12",
  "logging",
  "ring",
] }
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "std",
  "tls12",
  "logging",
] }
tokio-rustls = { version = "0.26", default-features = false, features = [
  "ring",
  "logging",
  "tls12",
] }
http-body = "1"
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.14", features = ["transport"] }
bytes = "1"
anyhow = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
failsafe = "1"
matchit = "0.9"
wr-common = { path = "../wr-common", features = [
  "discovery",
  "pool",
  "config",
  "signal",
  "http-pool",
  "tls",
] }
tokio-retry = "0.3"
tracing = "0.1"
