[package]
name    = "wr-sdk"
version = "0.1.0"
edition = "2021"

[features]
default = ["prost"]
prost   = ["dep:prost"]
serde   = ["dep:serde"]

[dependencies]
prost          = { version = "0.14", optional = true }
serde          = { version = "1", optional = true }
serde_json     = "1"
http           = "1"
chrono         = { version = "0.4", default-features = false }
rust_decimal   = "1"
wit-bindgen    = "0.51.0"
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
