[package]
name = "wr-tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tokio          = { version = "1", features = ["full"] }
tonic          = { version = "0.12", features = ["transport"] }
hyper          = { version = "1", features = ["http1", "server"] }
hyper-util     = { version = "0.1", features = ["tokio"] }
http           = "1"
http-body-util = "0.1"
bytes          = "1"
anyhow         = "1"
tokio-stream   = { version = "0.1", features = ["net"] }
tower          = { version = "0.5", features = ["full"] }
prost          = "0.13"
prost-types    = "0.13"
serde          = { version = "1", features = ["derive"] }
toml           = "0.8"
wr-common      = { path = "../wr-common" }
wr-manager     = { path = "../wr-manager" }
wr-proxy       = { path = "../wr-proxy" }
