[package]
name    = "wr-tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.14", features = ["transport"] }
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http2", "tokio"] }
http = "1"
http-body-util = "0.1"
bytes = "1"
anyhow = "1"
tokio-stream = { version = "0.1", features = ["net"] }
tower = { version = "0.5", features = ["full"] }
prost = "0.14"
prost-types = "0.14"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
wr-common = { path = "../wr-common", features = [
  "http-pool",
  "pool",
  "config",
  "tls",
] }
wr-engine = { path = "../wr-engine" }
wr-manager = { path = "../wr-manager" }
wr-proxy = { path = "../wr-proxy" }
rustls = { version = "0.23", features = ["ring"] }
rcgen = { version = "0.13", features = ["pem"] }
tokio-rustls = "0.26"
serde_json = "1"
tracing = "0.1"
wasmtime = { version = "43", features = ["component-model"] }
wasmtime-wasi = "43"
wasmtime-wasi-http = "43"
chitchat = "0.10"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
prost-build = "0.14"
