[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
prost = "0.13"
wr-sdk = { path = "../../wr-sdk" }

[build-dependencies]
prost-build = "0.13"
wr-build = { path = "../../wr-build" }

[package.metadata.component]
package = "ecommerce:client"

[package.metadata.component.target]
world = "ecommerce:client/client"

[package.metadata.component.target.dependencies]
"wasi:http" = { path = "wit/deps/http.wit" }
"wasi:io" = { path = "wit/deps/io.wit" }
"wasi:cli" = { path = "wit/deps/cli.wit" }
"wasi:clocks" = { path = "wit/deps/clocks.wit" }
"wasi:random" = { path = "wit/deps/random.wit" }
