[package]
name = "inventory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }

[package.metadata.component]
package = "ecommerce:inventory"

[package.metadata.component.target]
world = "ecommerce:inventory/inventory"

[package.metadata.component.target.dependencies]
"wruntime:db" = { path = "wit/deps/db.wit" }
"wasi:http" = { path = "wit/deps/http.wit" }
"wasi:clocks" = { path = "wit/deps/clocks.wit" }
"wasi:io" = { path = "wit/deps/io.wit" }
"wasi:random" = { path = "wit/deps/random.wit" }
"wasi:cli" = { path = "wit/deps/cli.wit" }
