[workspace]

[package]
name    = "collector"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
prost = "0.14"
wr-sdk = { path = "../../../wr-sdk" }
wit-bindgen = "0.51.0"
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
flate2 = { version = "1.0", default-features = false, features = [
  "rust_backend",
] }
tar = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
prost-build = "0.14"
wr-build    = { path = "../../../wr-build" }
