[workspace]

[package]
name    = "coordinator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
prost          = "0.14"
wr-sdk         = { path = "../../../wr-sdk", features = ["serde"] }
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

[build-dependencies]
prost-build = "0.14"
wr-build    = { path = "../../../wr-build" }

[package.metadata.component]
package = "codegen:coordinator"

[package.metadata.component.target]
world = "codegen:coordinator/coordinator"

[package.metadata.component.target.dependencies]
"wruntime:db"        = { path = "../../../wr-sdk/wit/deps/db.wit" }
"wruntime:tracing"   = { path = "../../../wr-sdk/wit/deps/tracing.wit" }
"wruntime:blobstore" = { path = "../../../wr-sdk/wit/deps/blobstore.wit" }
"wasi:http"          = { path = "../../../wr-sdk/wit/deps/http.wit" }
"wasi:clocks"        = { path = "../../../wr-sdk/wit/deps/clocks.wit" }
"wasi:io"            = { path = "../../../wr-sdk/wit/deps/io.wit" }
"wasi:random"        = { path = "../../../wr-sdk/wit/deps/random.wit" }
"wasi:cli"           = { path = "../../../wr-sdk/wit/deps/cli.wit" }
