[workspace]

[package]
name    = "worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
prost          = "0.14"
wr-sdk         = { path = "../../../wr-sdk" }
wit-bindgen    = "0.51.0"
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }

[build-dependencies]
prost-build = "0.14"
wr-build    = { path = "../../../wr-build" }
