[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
prost = "0.14"
wr-sdk = { path = "../../../wr-sdk" }
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }

[build-dependencies]
prost-build = "0.14"
wr-build = { path = "../../../wr-build" }

[package.metadata.component]
package = "ecommerce:client"

[package.metadata.component.target]
world = "ecommerce:client/client"

[package.metadata.component.target.dependencies]
"wruntime:tracing" = { path = "../../../wr-sdk/wit/deps/tracing.wit" }
"wasi:http" = { path = "../../../wr-sdk/wit/deps/http.wit" }
"wasi:io" = { path = "../../../wr-sdk/wit/deps/io.wit" }
"wasi:cli" = { path = "../../../wr-sdk/wit/deps/cli.wit" }
"wasi:clocks" = { path = "../../../wr-sdk/wit/deps/clocks.wit" }
"wasi:random" = { path = "../../../wr-sdk/wit/deps/random.wit" }
